[WinCairo] ClearType should be enabled on Cairo port https://bugs.webkit.org/show_bug.cgi?id=145492

Patch by Karlen Simonyan <szkarlen@gmail.com> on 2015-07-09
Reviewed by Brent Fulgham.

* platform/graphics/win/FontPlatformDataCairoWin.cpp:
(WebCore::FontPlatformData::FontPlatformData):
Use CAIRO_ANTIALIAS_BEST instead of CAIRO_ANTIALIAS_GRAY.



Canonical link: https://commits.webkit.org/164872@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@186599 268f45cc-cd09-0410-ab3c-d52691b4dbfc